--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Are You Living in Truth? Quick Check | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Shifting the Downward Pull to Upward</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -180,7 +180,7 @@
                     <div class="video-info">
                         <h3>Risk Management In Algo Trading Courses - Worth Having?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -224,7 +224,7 @@
                     <div class="video-info">
                         <h3>Arthur Visits Bradford😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -312,7 +312,7 @@
                     <div class="video-info">
                         <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -433,7 +433,7 @@
                     <div class="video-info">
                         <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -554,7 +554,7 @@
                     <div class="video-info">
                         <h3>Arthur is The WORST Wingman..💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -565,7 +565,7 @@
                     <div class="video-info">
                         <h3>Riding Through -14°C to Philadelphia #Sadhguru #EcstasyOfEnlightenment</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -710,7 +710,7 @@
                     <div class="video-info">
                         <h3>Arthur Hops on 67 Trend🥀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -831,7 +831,7 @@
                     <div class="video-info">
                         <h3>Arthur Couldn't Understand Tays😭</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -974,7 +974,7 @@
                     <div class="video-info">
                         <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5767,7 +5767,7 @@
                         <div class="video-info">
                             <h3>Risk Management In Algo Trading Courses - Worth Having?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Are You Living in Truth? Quick Check | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Shifting the Downward Pull to Upward</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7964,7 +7964,7 @@
                         <div class="video-info">
                             <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8096,7 +8096,7 @@
                         <div class="video-info">
                             <h3>Riding Through -14°C to Philadelphia #Sadhguru #EcstasyOfEnlightenment</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>Home Baking a Large, Artisanal New York Style Pizza! (Recipe included)</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Visits Bradford😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>Arthur is The WORST Wingman..💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10364,7 +10364,7 @@
                         <div class="video-info">
                             <h3>Arthur Hops on 67 Trend🥀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10386,7 +10386,7 @@
                         <div class="video-info">
                             <h3>Arthur Couldn't Understand Tays😭</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10441,7 +10441,7 @@
                         <div class="video-info">
                             <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
