--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>"It's Not a Rapper Bro"💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">5 minutes ago</div>
+                        <div class="date">21 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>A Heartwarming Moment in Philadelphia | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">54 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Algorithmic Trading: Accelerate Your Learning With Mentorship #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -235,7 +235,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Movie?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -820,7 +820,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 12.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2499,9 +2499,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
+                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Pro golfers don't keep spine angle. They do something entirely different that you need to see">
                     <div class="video-info">
-                        <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
+                        <h3>Pro golfers don't keep spine angle. They do something entirely different that you need to see</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">4 weeks ago</div>
                     </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Algorithmic Trading: Accelerate Your Learning With Mentorship #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5923,7 +5923,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 12.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>A Heartwarming Moment in Philadelphia | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">54 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10090,9 +10090,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
+                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Pro golfers don't keep spine angle. They do something entirely different that you need to see">
                         <div class="video-info">
-                            <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
+                            <h3>Pro golfers don't keep spine angle. They do something entirely different that you need to see</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">4 weeks ago</div>
                         </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>"It's Not a Rapper Bro"💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">5 minutes ago</div>
+                            <div class="date">21 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Movie?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
