--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -257,7 +257,7 @@
                     <div class="video-info">
                         <h3>Repeat your pre-trade analysis</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1766,7 +1766,7 @@
                     <div class="video-info">
                         <h3>Noone Believed Him?!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5800,7 +5800,7 @@
                         <div class="video-info">
                             <h3>Repeat your pre-trade analysis</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10716,7 +10716,7 @@
                         <div class="video-info">
                             <h3>Noone Believed Him?!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
