--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Escape the Prison of the Mind | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>"It's Not a Rapper Bro"💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>When the gluten is gone 🍕🔥 #streetfood #pizza</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2206,7 +2206,7 @@
                     <div class="video-info">
                         <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -3687,9 +3687,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=oCwDRkSorOg" target="_blank">
-                    <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.">
+                    <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"">
                     <div class="video-info">
-                        <h3>He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.</h3>
+                        <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">Sep 08, 2025</div>
                     </div>
@@ -6451,7 +6451,7 @@
                         <div class="video-info">
                             <h3>Why You Can’t Afford to Bank That Winning Trade 💭</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Escape the Prison of the Mind | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>When the gluten is gone 🍕🔥 #streetfood #pizza</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10211,9 +10211,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=oCwDRkSorOg" target="_blank">
-                        <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.">
+                        <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"">
                         <div class="video-info">
-                            <h3>He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.</h3>
+                            <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">Sep 08, 2025</div>
                         </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>"It's Not a Rapper Bro"💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
